# segmentacao-clientes-olist

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: analise-exploratoria.ipynb  modelagem.ipynb  processamento.ipynb
segmentacao/: __init__.py  dataset.py  features.py  plots.py
segmentacao/modeling/: predict.py  train.py
