[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "segmentacao"
version = "0.0.1"
description = "Aplicando segmenta\u00e7\u00e3o de clientes no e-commerce"
authors = [
  { name = "joao-maia" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["segmentacao"]
include = ["pyproject.toml", "segmentacao/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["segmentacao"]
force-sort-within-sections = true

